package com.emc.mongoose.storage.mock.proto;

option java_package = "com.emc.mongoose.storage.mock.impl.proto";
option java_outer_classname = "StorageMockProto";
option java_multiple_files = true;

service RemoteQuerier {
    rpc GetRemoteObject(ClientMessage) returns (ServerMessage) {}
}

message ClientMessage {
    required string containerName = 1 [default = ""];
    required string id = 2 [default = ""];
    required fixed64 offset = 3 [default = 0];
    required fixed64 size = 4 [default = 0];
}

message ServerMessage {
    required fixed64 maskRangesRead = 1;
    required fixed32 layerNum = 2 [default = 0];
    required fixed64 position = 3 [default = 0];
    required string containerName = 4 [default = ""];
    required string id = 5 [default = ""];
    required fixed64 offset = 6 [default = 0];
    required fixed64 size = 7 [default = 0];
    required bool isPresent = 8 [default = false];
}